--- a/src/App.css
+++ b/src/App.css
@@ -518,7 +518,6 @@ body {
 .exchange-container {
   background-color: #f1f3f6;
   min-height: 100vh;
-  padding-bottom: 70px;
   display: flex;
   flex-direction: column;
 }
@@ -529,6 +528,7 @@ body {
   margin: 0;
   font-size: 1.6rem;
   text-align: center;
+  margin: 20px 0;
 }
 .exchange-grid {
   display: grid;
@@ -605,7 +605,6 @@ body {
 .profile-container {
   background-color: #f1f3f6;
   min-height: 100vh;
-  padding-bottom: 70px;
 }
 
 .profile-content {
