--- a/src/App.css
+++ b/src/App.css
@@ -399,6 +399,12 @@ body {
   flex-direction: column;
 }
 
+.watchads-container h3 {
+  text-align: center;
+  font-size: 1.8rem;
+  margin: 30px 0;
+}
+
 .watchads-content {
   flex: 1;
   display: flex;
