--- a/src/App.css
+++ b/src/App.css
@@ -713,3 +713,18 @@ body {
   color: #0050b3;
   border-radius: 6px;
 }
+.spinner {
+  margin: 10px auto;
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #444;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
